fixed the bottom image extending the page on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -182,15 +182,15 @@ h3 {
     justify-content: center;
     align-items: center;
     overflow: hidden;
-    height: 30vh;
+    height: 20vh;
     max-height: 25vh;
 }
 
 .gallery-header-img img {
     flex-shrink: 0;
-    min-width: 100%;
+    width: 100%;
     object-fit: cover;
-    height: 30vh;
+    height: auto;
     position: absolute;
 }
 
